--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Config
+app/config/config.yml
+
 # =========================
 # Operating System Files
 # =========================
