--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ $RECYCLE.BIN/
 # Config
 app/config/config.yml
 
+# FTP local
+ftpsync.settings
+
 # =========================
 # Operating System Files
 # =========================
